# libtrails

./: .gitignore  CLAUDE.md  README.md  dev.sh  match_to_calibre.py  pyproject.toml  requirements.txt  scrape_mapleread.py  scrape_mapleread_full.py  start.sh
.serena/: project.yml
data/: gutenberg_demo_books.csv
docs/: 100_gutenberg_classics.md  calibre-plugin-guide.md  calibre-rag-plugin-spec.md  calibre-rag-prd.md  calibre-rag-pseudocode.md  calibre_plugin_research.md  cli-guide.md  clustering.md  domain-generation-methodology.md  doppelgangers-analysis.md  galaxy-visualization.md  graph-clustering-pipeline.md  gutenberg_demo_final.md  gutenberg_demo_library.md  leiden-clustering-optimization.md  log-monitoring.md  pipeline-validation.md  plugin_idea.md  read_books_with_claude_code.md  topic-extraction-pipeline.md  web-interface-plan.md
experiments/: compare_batch_vs_single.py  compare_models.py  domain_labels.json  domain_labels_final.json  domain_labels_final.py  domain_labels_v2.json  domain_labels_v2.py  dspy_topic_optimization.py  label_domains.py  optimized_topic_extractor.json  resolution_experiment.py  super_clusters.json  super_clusters_new.json  super_clusters_robust.json  super_clusters_robust.py  super_clusters_split.json  super_clusters_v2.json  umap_universe.py  universe_coords.json
scripts/: create_demo_db.py  download_gutenberg.py  setup_calibre_library.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_clustering.py  test_config.py  test_database.py  test_deduplication.py  test_document_parser.py  test_domains.py  test_embeddings.py  test_indexer.py  test_stats.py  test_sweep.py  test_sync.py  test_topic_extractor.py  test_topic_graph.py  test_vector_search.py
utils/: calibre_fetch_metadata.py  calibre_fetch_tags.py  create_ipad_db.py  enrich_missing.py  enrich_targeted.py  fix_metadata.py  match_to_calibre.py  monitor.py  scrape_mapleread.py  scrape_mapleread_full.py  try_goodreads.py
web/: astro.config.mjs  package-lock.json  (+1 more)
(+52 files in other folders)
