[project]
name = "libtrails"
version = "0.1.0"
description = "Trail-finding across a Calibre book library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selectolax>=0.3.21",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
libtrails = "libtrails.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libtrails"]
